# workflow

./: .env.example  .gitignore  README.md  capacitor.config.json  docker-compose.yml  index.html  package-lock.json  package.json
android/app/: build.gradle
android/app/src/main/res/values/: strings.xml
backend/: .env.example  pyproject.toml  test_gemini.py  test_groq.py  test_ollama.py  workflow.db
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/core/: exceptions.py  llm_factory.py  security.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  audit_log.py  task.py  user.py  work_log.py
backend/app/repositories/: audit_repository.py  base.py  log_repository.py  task_repository.py  user_repository.py
backend/app/routers/: ai.py  audit.py  auth.py  logs.py  tasks.py
backend/app/schemas/: auth.py  task.py  work_log.py
backend/app/services/: ai_service.py  auth_service.py  log_service.py  task_service.py
backend/scripts/: e2e_test.py  seed.py  simulate_user.py
frontend/: app.py
frontend/.streamlit/: config.toml
frontend/components/: ai_badge.py
frontend/utils/: api_client.py
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
src/: App.jsx  index.css
src/api/: client.js  mockData.js  taskStore.js
src/components/: LanguageSwitcher.jsx  LanguageSwitcher.module.css  LogoutButton.jsx  LogoutButton.module.css  ProtectedRoute.jsx
src/context/: AuthContext.jsx
src/i18n/: i18n.js
src/i18n/locales/: en.json  hi.json  te.json
src/pages/: EmployeeDashboard.jsx  EmployeeDashboard.module.css  LoginPage.jsx  LoginPage.module.css  ManagerDashboard.jsx  ManagerDashboard.module.css
(+1 files in other folders)
