[project]
name = "workflow-backend"
version = "1.0.0"
description = "WorkFlow — AI-Powered Employee Task & Accountability Platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "supabase>=2.10.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    # Auth & security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    # Config
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    # AI & LLM
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic-ai>=0.0.14",
    # RAG
    "llama-index>=0.12.0",
    "llama-index-vector-stores-supabase>=0.3.0",
    "llama-index-embeddings-ollama>=0.5.0",
    "llama-index-llms-ollama>=0.5.0",
    # HTTP
    "httpx>=0.27.0",
    # Utilities
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

